# geeks-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
event-sourcing/: Cargo.toml
event-sourcing-git/: Cargo.toml
event-sourcing-git/src/: commit_snapshot.rs  git_eventstore.rs  lib.rs
event-sourcing/src/: aggregate.rs  eventstore.rs  lib.rs  snapshot.rs
event-sourcing/src/testing/: mem_eventstore.rs  mod.rs
geeks-event-sourcing/: Cargo.toml
geeks-event-sourcing-git/: Cargo.toml
geeks-event-sourcing-git/src/: commit_snapshot.rs  git_eventstore.rs  lib.rs
geeks-event-sourcing/src/: aggregate.rs  event.rs  eventstore.rs  lib.rs
geeks-event-sourcing/src/testing/: mem_eventstore.rs  mod.rs  todo_domain.rs
geeks-git/: Cargo.toml
geeks-git-testing/: Cargo.toml
geeks-git-testing/src/: lib.rs
geeks-git/src/: commit.rs  commit_info.rs  commit_reader.rs  lib.rs  status.rs  testing.rs
git/: Cargo.toml
git-testing/: Cargo.toml
git-testing/src/: lib.rs
git/src/: commit.rs  commit_message.rs  commit_reader.rs  error.rs  repository.rs
