[package]
name = "geeks_event_sourcing_git"
description = "Git eventstore implementation for geeks productions."
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
git2 = "0.14.3"
thiserror = "1.0.31"

geeks_event_sourcing = { path = "../event-sourcing" }
geeks_git = { path = "../git" }

[dev-dependencies]
chrono = "0.4.19"
tokio = { version = "1.18.1", features = ["full"] }

geeks_git_testing = { path = "../git-testing" }
