[package]
name = "geeks_event_sourcing"
description = "Event sourcing crate for geeks productions."
license = "MIT"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
async-trait = "0.1.53"
thiserror = "1.0.31"
chrono = "0.4.19"
tokio = { version = "1.18.1", features = ["full"] }

[dev-dependencies]
geeks_git_testing = { path = "../git-testing" }
