[package]
name = "geeks_event_sourcing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
async-trait = "0.1.53"
thiserror = "1.0.31"
chrono = "0.4.19"
